<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="com.lewa.pond.preferences">
	<PreferenceCategory android:title="@string/header_data_and_synchronization" />
	<PreferenceScreen 
		android:title="@string/labi_sync_title" 
		android:summary="@string/labi_sync_summary" >
		<intent android:targetPackage="com.lewa.labi" 
			android:targetClass="com.lewa.labi.SyncActivity" />
	</PreferenceScreen>
	<PreferenceScreen 
		android:title="@string/labi_recovery_title"
		android:summary="@string/labi_recovery_summary">
		<intent android:targetPackage="com.lewa.labi" 
			android:targetClass="com.lewa.labi.RecoveryActivity" />
	</PreferenceScreen>
	<PreferenceCategory android:title="@string/account_settings_title" />	
		<PreferenceScreen 
			android:title="@string/account_manage_title">
			<intent android:targetPackage="com.lewa.pond" 
				android:targetClass="com.lewa.pond.auth.LewaAccountActivity" />
	</PreferenceScreen>
</PreferenceScreen>