<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_linear_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/account_email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:textColor="?android:attr/textColorPrimary" 
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/label_lewa_forum_user_can_use_eamil_login"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorPrimary"  >
    </TextView>

    <EditText
        android:id="@+id/account_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="18dip"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:focusable="true"
        android:textCursorDrawable="@null"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="?android:attr/textColorPrimary" >
    </EditText>

    <TextView
        android:id="@+id/forget_pwd_tv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/label_forget_passwd_click_here"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_blue" >
    </TextView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="18dip" >

        <Button
            android:id="@+id/account_btn_submit"
            android:layout_width="@dimen/login_button_witdh"
            android:layout_height="48dip"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/btn_download_bg"
            android:text="@string/label_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" >
        </Button>

        <Button
            android:id="@+id/account_btn_register"
            android:layout_width="@dimen/login_button_witdh"
            android:layout_height="48dip"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_update_bg"
            android:text="@string/label_register"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" >
        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dip"
        android:layout_marginTop="13dip" >

        <TextView
            android:id="@+id/no_receive_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/label_have_not_received_email" 
        	android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/resend_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/no_receive_email"
            android:text="@string/label_click_here"
            android:textColor="@color/color_blue" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="16dip" >

        <TextView
            android:id="@+id/lewa_ad_blod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/label_lewa_html_ad_blod"
            android:textSize="25sp"
            android:textStyle="bold"
        	android:textColor="?android:attr/textColorPrimary"  />

        <TextView
            android:id="@+id/lewa_ad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/lewa_ad_blod"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@id/lewa_ad_blod"
            android:text="@string/label_lewa_html_ad_title"
            android:textSize="16sp" 
        	android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/lewa_ad_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/lewa_ad_blod"
            android:text="@string/label_lewa_html_ad_content"
            android:textSize="16sp" 
        	android:textColor="?android:attr/textColorPrimary" />
    </RelativeLayout>

</LinearLayout>