<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_linear_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/account_email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="32dip"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/dialog_your_email_address_is_your_signin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_textview" >
    </TextView>

    <EditText
        android:id="@+id/account_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:hint="@string/label_password"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <EditText
        android:id="@+id/account_password_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:hint="@string/label_reenter"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/dialog_enter_valid_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_textview" >
    </TextView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <EditText
            android:id="@+id/identi_et"
            android:layout_width="225dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/label_security_code"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>

        <TextView
            android:id="@+id/identi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dip"
            android:layout_toRightOf="@id/identi_et"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:text="@string/label_please_input_security_code"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/color_textview" >
        </TextView>

        <TextView
            android:id="@+id/change_security_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:text="@string/label_change_security_code"
            android:textColor="@color/color_blue" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="32dip" >

        <Button
            android:id="@+id/submit_register"
            android:layout_width="136dip"
            android:layout_height="48dip"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_update_bg"
            android:text="@string/label_register"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_white" >
        </Button>
    </RelativeLayout>

</LinearLayout>